--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -4,8 +4,13 @@
     padding: 12px;
     font-weight: 700;
     color: #2a363b;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .link:hover,
+  .link:focus{
+    scale:1.1;
+    color:rgb(95, 0, 183);
   }
   
-  .link.active {
-    color: #e84a5f;
-  }
