--- a/src/components/ContactDataUpdateForm/ContactDataUpdateForm.module.css
+++ b/src/components/ContactDataUpdateForm/ContactDataUpdateForm.module.css
@@ -1,12 +1,3 @@
-.contacts_update_title {
-  font-weight: 600;
-  font-size: 22px;
-  line-height: 22px;
-  letter-spacing: 0.01em;
-  color: #1f3349;
-  margin-bottom: 15px;
-}
-
 .contacts_update_form {
   display: flex;
   flex-direction: column;
@@ -14,36 +5,13 @@
   margin: 0 auto;
   width: 350px;
   border-radius: 10px;
-  background: linear-gradient(120deg, #6719a7, #edd9f6);
+  background: linear-gradient(120deg, #6719a7, #55a0be);
   box-shadow: 5px 5px 5px #8b8b8b, -14px -14px 23px #ffffff;
   padding: 20px 20px;
 }
 
 .contacts_update_label {
-  font-size: 16px;
-  width: 250px;
   color: #ffffff;
-  font-weight: bold;
-}
-
-.contacts_update_input {
-  display: inline-block;
-  border: none;
-  outline: none;
-  width: 100%;
-  margin: 5px 0 20px;
-  height: 30px;
-  background-color: rgb(240, 240, 240);
-  border-radius: 5px;
-  border: 1px solid rgb(218, 218, 218);
-  font-size: 16px;
-  padding: 5px 5px;
-}
-
-.contacts_update_input:focus {
-  background-color: white;
-  transform: scale(1.05);
-  transition: scale 0.2s;
 }
 
 .contacts_update_button {
