--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,36 +1,31 @@
-/* .list {
-    width: 400px;
-    padding: 20px 10px 10px;
-    position: absolute;
-    top: 45px;
+
+
+  /* .contact_list_empty{
+    display: inline-block;
+    position: relative;
+    border-radius: 2.5em;
+    margin-top: 50px;
     left: 50%;
-    transform: translateX(-50%);
-  }
-  
-  .error {
-    color: #c2c2c2;
+    font-size: 20px;
     text-align: center;
+    transform: translate(-50%, -50%);
   } */
 
   .contact_list{
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-    list-style: disc;
   }
 
   .contact_list_item{
-    margin-bottom: 10px;
-    margin-left: 5px;
-    padding-bottom: 10px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 15px;
+    gap: 30px;
     flex-wrap: wrap;
-    font-weight: 600;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #00000057;
   }
 
   .contact_list_values{
@@ -79,3 +74,4 @@
   .contact_list_btn:active{
     border-color: #2a2a2a;
   }
+
