--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,13 +1,10 @@
 .search {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  display: inline-block;
   position: relative;
   border-radius: 2.5em;
-  margin-top: 10px;
+  margin-top: 50px;
   left: 50%;
-  margin-right: -50%;
+  font-size: 20px;
+  text-align: center;
   transform: translate(-50%, -50%);
 }
 
