--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -4,17 +4,19 @@
   gap: 5px;
 }
 
-.navigation_link {
-  padding: 4px 8px;
-  font-size: 22px;
-  line-height: 1.25;
-  border-radius: 6px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+.link {
+    display: inline-block;
+    text-decoration: none;
+    padding: 12px;
+    font-weight: 700;
+    color: #2a363b;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.navigation_link:hover,
-.navigation_link:focus {
-  background: rgba(177, 186, 196, 0.12);
-  color: #2196f3;
-}
+  .link:hover,
+  .link:focus{
+    scale:1.1;
+    color:rgb(95, 0, 183);
+  }
+
