--- a/src/components/Phonebook/Phonebook.module.css
+++ b/src/components/Phonebook/Phonebook.module.css
@@ -5,39 +5,17 @@
     margin: 0 auto;
     width: 350px;
     border-radius: 10px;
-    background: linear-gradient(120deg, #6719a7, #edd9f6);
-    box-shadow: 5px 5px 5px #8b8b8b, -14px -14px 23px #ffffff;
-    padding: 20px 20px;
+    background: linear-gradient(120deg, #6719a7, #55a0be);
+    box-shadow: 5px 5px 5px #8b8b8b;
+    padding: 30px 20px;
   }
+
   .phonebook_label {
-    font-size: 16px;
-    width: 250px;
     color: #ffffff;
-    font-weight: bold;
-  }
-  
-  .phonebook_input {
-    display: inline-block;
-    border: none;
-    outline: none;
-    width: 100%;
-    margin: 5px 0 20px;
-    height: 30px;
-    background-color: rgb(240, 240, 240);
-    border-radius: 5px;
-    border: 1px solid rgb(218, 218, 218);
-    font-size: 16px;
-    padding: 5px 5px;
-  }
-  
-  .phonebook_input:hover,
-  .phonebook_input:focus {
-    background-color: white;
-    transform: scale(1.05);
-    transition: scale 0.2s;
   }
   
   .phonebook_submit_btn {
+    margin-top: 20px;
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 14px;
@@ -47,7 +25,6 @@
     color: #4f0087;
     background-color:white;
     border: 1px solid rgb(218, 218, 218);
-  
   }
   
   .phonebook_submit_btn:hover,
