--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -8,30 +8,29 @@
     display: flex;
   align-items:center;
   padding: 4px 15px;
-  border-right:1px solid;
   font-size: 16px;
   line-height: 1.25;
 }
 
 
-.logoutBtn {
-    display: flex;
+.logoutBtn{
+  display: flex;
   align-items: center;
+  margin: 15px auto;
   gap: 5px;
   padding: 4px 8px;
-
-  font-family:inherit;
   font-size: 16px;
+  cursor: pointer;
+  color: white;
   line-height: 1.25;
   border-radius: 6px;
-  border-color: transparent;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background: linear-gradient(120deg, #6719a7, #55a0be);
+  transition: scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border:none;
 }
 
-/* .logoutBtn:hover:not(:active),
-  &:focus-visible:not(:active) {
-    color: #2196f3;
-    background: rgba(177, 186, 196, 0.12);
-} */
+.logoutBtn:hover,
+.logoutBtn:focus {
+  font-weight: bold;
+  scale: 1.05;
+}
