--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,28 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  background: linear-gradient(-45deg, #c86cf3, #a459c0, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 code {
@@ -20,3 +37,28 @@ ol {
   margin: 0;
   padding: 0;
 }
+
+label {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  width: 250px;
+  color: #383636;
+} 
+
+input {
+  outline: none;
+  width: 100%;
+  border: 0;
+  margin: 5px 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+input:hover,
+input:focus{
+    border: 2px solid #4f0087;
+}
+
