--- a/src/pages/PhonebookPage/PhonebookPage.module.css
+++ b/src/pages/PhonebookPage/PhonebookPage.module.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  max-width: 900px;
-  background: #ecf1f3;
+  max-width: 500px;
+  background: rgba(255, 255, 255, 0.4);
   margin-top: 32px;
   margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
-  padding: 26px 32px;
-  border-radius: 6px;
+  padding: 40px 32px;
+  border-radius: 15px;
   box-shadow: 10px 10px 8px 2px rgba(0, 0, 0, 0.3);
 }
